# glsl-language-server-gentoo

./: .gitmodules  CMakeLists.txt
src/: main.cpp
